# huggingface-dataset-crawler

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  run.py
assets/: output.json
scripts/: run_scripts.sh
src/: _config.py  _settings.py  main.py
src/serivces/agrilla_sv/: _mapping.py  agrilla_sv.py
src/serivces/crawler/crawler/: settings.py
src/serivces/crawler/crawler/spiders/: huggingface_spider.py
src/utils/: helpers.py  logger.py
